--- a/CPMMethod.BlazorWasmClient/CPMMethod.BlazorWasmClient.csproj
+++ b/CPMMethod.BlazorWasmClient/CPMMethod.BlazorWasmClient.csproj
@@ -7,8 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.1"/>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.1" PrivateAssets="all"/>
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.1" PrivateAssets="all" />
+        <PackageReference Include="Syncfusion.Blazor.Core" Version="19.4.0.56" />
+        <PackageReference Include="Syncfusion.Blazor.Gantt" Version="19.4.0.56" />
+        <PackageReference Include="Syncfusion.Blazor.Themes" Version="19.4.0.56" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="wwwroot\sample-data\weather.json" />
     </ItemGroup>
 
 </Project>
