--- a/CPMMethod.BlazorWasmClient/CPMMethod.BlazorWasmClient.csproj
+++ b/CPMMethod.BlazorWasmClient/CPMMethod.BlazorWasmClient.csproj
@@ -18,4 +18,8 @@
       <_ContentIncludedByDefault Remove="wwwroot\sample-data\weather.json" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CPMMethod.Logic\CPMMethod.Logic.csproj" />
+    </ItemGroup>
+
 </Project>
