Add calculating unit profit

--- a/Boil.BlazorWasmClient/Boil.BlazorWasmClient.csproj
+++ b/Boil.BlazorWasmClient/Boil.BlazorWasmClient.csproj
@@ -19,6 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Boil.Assignment.Logic\Boil.Assignment.Logic.csproj" />
       <ProjectReference Include="..\Boil.Cpm.Logic\Boil.Cpm.Logic.csproj" />
     </ItemGroup>
 
